--- a/src/Resources/app/administration/src/component/cms/elements/blur-elysium-slider/config/arrows/template.html.twig
+++ b/src/Resources/app/administration/src/component/cms/elements/blur-elysium-slider/config/arrows/template.html.twig
@@ -39,7 +39,7 @@
         :placeholder="viewportsPlaceholder('arrows.iconSize', 24)"
         :label="$tc('blurElysiumSlider.config.arrows.size.label')"
         :show-device="true"
-        :device="currentDevice"
+        :device="device"
         @on-device="cmsDeviceSwitch" />
 
     <blur-colorpicker
