--- a/src/Resources/app/administration/src/component/cms/elements/blur-elysium-slider/config/settings/template.html.twig
+++ b/src/Resources/app/administration/src/component/cms/elements/blur-elysium-slider/config/settings/template.html.twig
@@ -39,7 +39,7 @@
             :placeholder="viewportsPlaceholder('settings.slidesPerPage', 1)"
             :min="1"
             :show-device="true"
-            :device="currentDevice"
+            :device="device"
             :unit="false"
             @on-device="cmsDeviceSwitch"
             :model-value="settingsViewportConfig.slidesPerPage"
