--- a/src/Resources/app/administration/src/component/cms/elements/blur-elysium-slider/config/template.html.twig
+++ b/src/Resources/app/administration/src/component/cms/elements/blur-elysium-slider/config/template.html.twig
@@ -8,6 +8,8 @@
         <blur-device-switch 
             layout="row"
             show-label="false"
+            :device="device"
+            @change-device="changeDevice"
             :default-viewport="currentDevice"
             @change-viewport="changeViewport" 
             :style="{
