--- a/src/Resources/app/administration/src/component/cms/elements/blur-elysium-slider/config/sizing/template.html.twig
+++ b/src/Resources/app/administration/src/component/cms/elements/blur-elysium-slider/config/sizing/template.html.twig
@@ -13,7 +13,7 @@
         :placeholder="viewportsPlaceholder('sizing.aspectRatio.width', 4)"
         unit="Ratio"
         :show-device="true"
-        :device="currentDevice"
+        :device="device"
         @on-device="cmsDeviceSwitch"
         :model-value="sizingViewportConfig.aspectRatio.width"
         @update-value="value => sizingViewportConfig.aspectRatio.width = value" />
@@ -27,7 +27,7 @@
         :placeholder="viewportsPlaceholder('sizing.aspectRatio.height', 3)"
         unit="Ratio"
         :show-device="true"
-        :device="currentDevice"
+        :device="device"
         @on-device="cmsDeviceSwitch"
         :model-value="sizingViewportConfig.aspectRatio.height"
         @update-value="value => sizingViewportConfig.aspectRatio.height = value" />
@@ -40,7 +40,7 @@
         :allow-empty="true"
         :label="$tc('blurElysiumSlider.config.sizing.maxHeight.label')"
         :placeholder="viewportsPlaceholder('sizing.maxHeight', 'noLimit', 'blurElysium.general')"
-        :device="currentDevice"
+        :device="device"
         @on-device="cmsDeviceSwitch"
         :model-value="sizingViewportConfig.maxHeight"
         @update-value="value => sizingViewportConfig.maxHeight = value" />
@@ -61,7 +61,7 @@
             desktop: { gridColumnEnd: 'span 4' },
         })"
         :show-device="true"
-        :device="currentDevice"
+        :device="device"
         @on-device="cmsDeviceSwitch"
         :model-value="sizingViewportConfig.slidesGap"
         @update-value="value => sizingViewportConfig.slidesGap = value" />
@@ -74,7 +74,7 @@
             desktop: { gridColumnEnd: 'span 4' },
         })"
         :show-device="true"
-        :device="currentDevice"
+        :device="device"
         @on-device="cmsDeviceSwitch"
         :model-value="sizingViewportConfig.paddingY"
         @update-value="value => sizingViewportConfig.paddingY = value" />
@@ -87,7 +87,7 @@
             desktop: { gridColumnEnd: 'span 4' },
         })"
         :show-device="true"
-        :device="currentDevice"
+        :device="device"
         @on-device="cmsDeviceSwitch"
         :model-value="sizingViewportConfig.paddingX"
         @update-value="value => sizingViewportConfig.paddingX = value" />
