--- a/src/Resources/app/administration/src/component/slides/form/cover/template.html.twig
+++ b/src/Resources/app/administration/src/component/slides/form/cover/template.html.twig
@@ -17,7 +17,10 @@
                 '--icon-padding': '6px',
                 '--icon-bg-color': '#ffffff',
                 '--icon-hover-bg-color': 'var(--color-gray-100)',
-            }" />
+            }" 
+            :device="device"
+            @change-device="device => elysiumUI.setDevice(device)"
+            />
     </template>
 
     <template #tabs>
