--- a/src/Resources/app/administration/src/component/utilities/slide-selection/style.scss
+++ b/src/Resources/app/administration/src/component/utilities/slide-selection/style.scss
@@ -55,3 +55,22 @@
     align-items: center;
     gap: 1rem;
 }
+
+.elysium-slide-selection-loader-leave-active {
+    transition: all 1s ease-out;
+}
+.elysium-slide-selection-loader-leave-form {
+    opacity: 1;
+}
+.elysium-slide-selection-loader-leave-to {
+    opacity: 0;
+}
+.elysium-slide-selection-enter-active {
+    transition: all 1s ease-in;
+}
+.elysium-slide-selection-enter-to {
+    opacity: 1;
+}
+.elysium-slide-selection-enter-from {
+    opacity: 0;
+}
