--- a/src/Resources/app/administration/src/component/utilities/slide-selection/template.html.twig
+++ b/src/Resources/app/administration/src/component/utilities/slide-selection/template.html.twig
@@ -1,52 +1,16 @@
-<div v-if="isLoading"
-    :style="{
-        position: 'relative',
-        minHeight: '100px',
-    }">
-    <mt-loader size="24px" />
-</div>
-<div v-else 
-    class="blur-elysium-slide-selection">
 
-    {# <div v-if="slidesCollection.total === 0"
-        class="blur-elysium-slide-selection-empty">
-        <p style="margin-bottom:1rem;line-height:1.5;">
-            {{ $tc( 'blurElysiumSlides.slideSelection.noSlides' ) }}
-        </p>
-        <div class="blur-elysium-slide-selection-empty-actions">
-            <sw-button
-                variant="primary"
-                @click="onCreateSlide">
-                {{ $tc( 'blurElysium.action.createSlide' ) }}
-                <blur-icon 
-                    name="blurph-arrow-square-out-bold"
-                    :size="14" />
-            </sw-button>
-            <sw-button
-                @click="onSlideOverview">
-                {{ $tc( 'blurElysium.action.toOverview' ) }}
-                <blur-icon 
-                    name="blurph-arrow-square-out-bold"
-                    :size="14" />
-            </sw-button>
-        </div>
-    </div> #}
+<div 
+    :style="{
+        display: 'flex',
+        flexDirection: 'column',
+        gap: '24px',
+    }">
 
     <blur-elysium-slide-search 
         :selected-slides-ids="selectedSlidesIds"
         @slide-selected="selectSlide" />
 
-    <div v-if="isLoading === false && selectedSlides.length > 0">
-
-        <div v-for="slide in selectedSlides" 
-            :key="slide.id">
-
-            {{slide.id}}
-    
-        </div>
-    </div>
-
-    {# <div v-if="isLoading === false && selectedSlides.length > 0"
+    <div v-if="selectedSlides.length > 0"
         class="blur-elysium-slide-selection-results">
 
         <div class="blur-elysium-slide-selection-results-list"
@@ -58,22 +22,40 @@
 
             <blur-elysium-slide-selection-item 
                 v-for="slide in selectedSlides" 
-                :key="slide"
-                :selected-slide="slide"
+                :key="slide.id"
+                :slide="slide"
                 draggable
                 @slide-loaded="slideLoaded"
                 @start-drag="startDrag"
                 @enter-drag="onDrag"
                 @position-up="slidePositionUp"
                 @position-down="slidePositionDown"
-                @edit-slide="onEditSlide"
-                @remove-slide="onRemoveSlide"/>
+                @edit-slide="slideEdit"
+                @remove-slide="slideRemove"/>
 
         </div>
-
     </div>
 
-    <mt-banner 
+    <div v-if="isLoading && selectedSlidesIds.length > 0"
+        :style="{
+            display: 'flex',
+            flexDirection: 'column',
+            gap: '30px',
+        }">
+        
+        <div v-for="placholder in selectedSlidesIds.length"
+            :key="placholder"
+            :style="{
+                minHeight: '114px',
+                position: 'relative',
+                borderRadius: '10px',
+                overflow: 'hidden',
+            }">
+            <mt-loader size="24px"/>
+        </div>
+    </div>
+
+    {# <mt-banner 
         v-else
         variant="info">
 
