fix states in block and section settings component

--- a/src/Resources/app/administration/src/component/cms/section/block-settings/template.html.twig
+++ b/src/Resources/app/administration/src/component/cms/section/block-settings/template.html.twig
@@ -11,7 +11,7 @@
             :step="1"
             :max="100"
             :unit="false"
-            :device="currentDevice"
+            :device="device"
             @on-device="cmsDeviceSwitch"
             :model-value="currentViewportSettings.order"
             @update-value="value => currentViewportSettings.order = value" /> 
@@ -29,7 +29,7 @@
             :step="1"
             :max="100"
             :unit="false"
-            :device="currentDevice"
+            :device="device"
             @on-device="cmsDeviceSwitch"
             :model-value="currentViewportSettings.rowEnd"
             @update-value="value => currentViewportSettings.rowEnd = value" /> 
