change cancel button snippet

--- a/src/Resources/app/administration/src/component/slides/detail/template.html.twig
+++ b/src/Resources/app/administration/src/component/slides/detail/template.html.twig
@@ -24,7 +24,7 @@
                 message: cancelActionMessage
             }"
             @click="cancelAction">
-            {{ $tc('sw-customer.detail.buttonCancel') }}
+            {{ $tc('blurElysium.action.cancel') }}
         </sw-button>
 
         <sw-button-group
