admin: fix events in blur-number-input

--- a/src/Resources/app/administration/src/component/form/number-input/template.html.twig
+++ b/src/Resources/app/administration/src/component/form/number-input/template.html.twig
@@ -7,8 +7,7 @@
     :placeholder="placeholder"
     :modelValue="value"
     :allowEmpty="true"
-    @change="updateValue"
-    @input-change="updateValue">
+    @update:modelValue="updateValue">
 
     <template v-if="unit !== false" #suffix>
         {{unit}}
