admin: fix blur-select-input events and styling

--- a/src/Resources/app/administration/src/component/form/select-input/template.html.twig
+++ b/src/Resources/app/administration/src/component/form/select-input/template.html.twig
@@ -2,8 +2,7 @@
     :class="classes"
     :placeholder="placeholder"
     :modelValue="value"
-    @update:modelValue="update"
-    @change="update">
+    @update:modelValue="updateValue">
     <template v-if="showDevice === true" #prefix>
         <span 
             :style="{
