--- a/src/Resources/app/administration/src/component/slides/form/general/template.html.twig
+++ b/src/Resources/app/administration/src/component/slides/form/general/template.html.twig
@@ -61,6 +61,7 @@
                 { value: 'h5', label: 'H5' },
                 { value: 'h6', label: 'H6' }
             ]"
+            placeholder="DIV"
             :label="$tc('blurElysiumSlides.forms.slideHeadlineElement.label')"
             :helpText="$tc('blurElysiumSlides.forms.slideHeadlineElement.helpText')"
             v-model:value="slide.slideSettings.slide.headline.element" />
