--- a/src/Resources/app/administration/src/extension/sw-cms-sidebar/template.html.twig
+++ b/src/Resources/app/administration/src/extension/sw-cms-sidebar/template.html.twig
@@ -1,13 +1,3 @@
-{% block sw_cms_sidebar_block_overview_category_options %}
-    {% parent %}
-
-    {% block sw_cms_sidebar_block_overview_category_blur_elysium_blocks %}
-        <option value="blur-elysium-blocks">
-            {{ $tc('blurElysium.cmsBlockGroup') }}
-        </option>
-    {% endblock %}
-{% endblock %}
-
 {% block sw_cms_sidebar_block_layout_settings_content %}
     {% parent %}
 
@@ -55,16 +45,23 @@
 
 <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
 {% block sw_cms_sidebar_block_overview_preview %}
-    <mt-banner 
-        v-if="currentBlockCategory === 'blur-elysium-blocks'"
-        variant="info"
-        :hideIcon="true"
-        class="mt-banner-small"
+    <div
         :style="{
-            margin: '16px 24px',
-            textAlign: 'center',
-        }"
-    ><span v-html="$tc('blurElysiumSection.sidebar.elysiumSectionNotification')" /></mt-banner>
+            display: currentBlockCategory === 'blur-elysium-blocks' ? 'block' : 'contents',
+        }">
 
-    {% parent %}
+        <mt-banner 
+            v-if="currentBlockCategory === 'blur-elysium-blocks'"
+            variant="info"
+            :hideIcon="true"
+            class="mt-banner-small"
+            :style="{
+                margin: '16px 24px',
+                textAlign: 'center',
+            }"
+        ><span v-html="$tc('blurElysiumSection.sidebar.elysiumSectionNotification')" /></mt-banner>
+
+        {% parent %}
+
+    </div>
 {% endblock %}
