admin-ui: fix slide-selections drag and drop, use shopware directive

--- a/src/Resources/app/administration/src/component/cms/elements/blur-elysium-slider/config/template.html.twig
+++ b/src/Resources/app/administration/src/component/cms/elements/blur-elysium-slider/config/template.html.twig
@@ -52,6 +52,7 @@
             <blur-column>
                 <blur-elysium-slide-selection 
                     :selected-slides="selectedSlides"
+                    @drag-slide-drop="dragSlideDrop"
                     @remove-slide="removeSlide"
                     @add-slide="addSlide"
                     @position-up="moveUpSlide"
