--- a/src/Resources/app/administration/src/component/utilities/slide-selection/item/style.scss
+++ b/src/Resources/app/administration/src/component/utilities/slide-selection/item/style.scss
@@ -7,13 +7,20 @@
     background-color: var(--item-bg-color);
     border: 1px solid var(--item-border-color);
     border-radius: 10px;
+
+    &.is--valid-drop {
+        background-color: var(--color-shopware-brand-50);
+        border-color: var(--color-shopware-brand-400);
+    }
 }
+
 .blur-elysium-slide-selection-item-headerbar {
     display: flex;
     flex-direction: row;
     padding: 10px;
     gap: 10px;
 }
+
 .blur-elysium-slide-selection-item-action,
 .blur-elysium-slide-selection-item-dragger {
     background-color: var(--item-badge-bg-color);
@@ -25,6 +32,7 @@
     border-radius: 20px;
     cursor: pointer;
 }
+
 .blur-elysium-slide-selection-item-actions {
     margin-left: auto;
     display: flex;
@@ -32,6 +40,7 @@
     align-items: center;
     gap: 10px;
 }
+
 .blur-elysium-slide-selection-item-slidename {
     background-color: var(--item-badge-bg-color);
     font-size: 14px;
@@ -42,9 +51,11 @@
     line-height: 1;
     border-radius: 20px;
 }
+
 .blur-elysium-slide-selection-item-content {
     padding: 10px;
 }
+
 .blur-elysium-slide-selection-item-title {
     padding: 0 12px 16px;
     font-size: 20px;
