--- a/src/Resources/app/administration/src/component/cms/elements/blur-elysium-slider/config/settings/template.html.twig
+++ b/src/Resources/app/administration/src/component/cms/elements/blur-elysium-slider/config/settings/template.html.twig
@@ -95,6 +95,15 @@
             ]"
     />
     {% endblock %}
+    <blur-column
+        :cols-tablet="6">
+
+        <blur-text-input
+            :label="$tc('blurElysium.general.cssClasses.label')"
+            :placeholder="$tc('blurElysium.general.cssClasses.placeholder')"
+            :helpText="$tc('blurElysium.general.cssClasses.helpText')"
+            v-model="settingsConfig.cssClasses" />
+    </blur-column>
 </blur-section>
 <blur-section
     gap
